--- a/README.mkd
+++ b/README.mkd
@@ -1,10 +1,8 @@
 # NoStats
 
-Author: Six Apart
-
-Copyright 2010 Six Apart, Ltd.
-
-License: GPL
+* Author: Six Apart
+* Copyright 2010 Six Apart Ltd.
+* License: GPL
 
 
 ## Overview
